--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "5.0.0",
-    "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
