--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -40,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
